<resources>
    <string name="app_name">QuizFight</string>
    <string name="title_all_games_activity">All open games</string>
    <string name="title_quiz_activity">Game</string>
    <string name="title_game_details_activity">Game details</string>
    <string name="title_create_game_activity">Create game</string>
    <string name="title_attempt_start_activity">Attempt game\'s start</string>


    <!---StartActivity -->
    <string name="btn_create">Create game</string>
    <string name="btn_join">Join game</string>
    <string name="ed_master">master server ip </string>

    <!--AllGamesActivity-->
    <string name="lbl_choose_game">Please choose a game</string>
    <string name="lbl_available_games">Those games are available : </string>

    <!--Nickname Dialog-->
    <string name="lbl_enter_nickname">Please enter a nickname for this game</string>
    <string name="hint_nickname">Nickname </string>
    <string name="lbl_nickname">Your nickname </string>
    <string name="lbl_created_by">Created By</string>

    <string name="lbl_players">Players</string>

    <!--CreateGameActivity-->
    <string name="lbl_game_name">Game name</string>
    <string name="lbl_number_of_questions">No. of questions</string>
    <string name="lbl_number_players">No. of players</string>
    <string name="required">Required ! </string>
    <string name="no_question_not_correct"> No. of questions must be between 1 and 20 </string>
    <string name="no_player_not_correct"> No. of players must be between 2 and 8 </string>

    <string name="btn_confirm">Confirm</string>

    <!--AttemptQuizStart-->
    <string name="btn_start">Start</string>
    <string name="btn_leave">Leave</string>

    <!--Disconnection Poll-->
    <string name="lbl_player_lost_connection">A player has been disconnected. Please vote</string>

    <string name="lbl_waiting_for_player">Waiting for player to reconnect</string>
    
</resources>
