<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGameActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_game_name"
                android:textColor="#ffffff"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_nickname"
                android:textColor="#ffffff"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_number_of_questions"
                android:textColor="#ffffff"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="10"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_number_player"
                android:textColor="#ffffff"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="10"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nickname"
                android:textColor="#ffffff"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text=" player"
                android:textColor="#ffffff"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>