<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttemptQuizStartActivity"
    android:background="@color/background"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_game_name"
                android:textColor="#ffffff"
                android:textSize="7pt"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="someGame"
                android:textColor="#ffffff"
                android:id="@+id/tv_game_name"
                android:textSize="8pt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_created_by"
                android:textColor="#ffffff"
                android:textSize="7pt"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Someone"
                android:textColor="#ffffff"
                android:id="@+id/tv_created_by"
                android:textSize="8pt"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_number_of_questions"
                android:textColor="#ffffff"
                android:textSize="7pt"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#ffffff"
                android:id="@+id/tv_question_count"
                android:textSize="8pt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nickname"
                android:textColor="#ffffff"
                android:textSize="7pt"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="someone"
                android:id="@+id/tv_nickname"
                android:textSize="8pt"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_number_players"
                android:textColor="#ffffff"
                android:textSize="7pt"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="1/5"
                android:textColor="#ffffff"
                android:textSize="7pt"
                android:layout_gravity="center"
                android:id="@+id/tv_maxplayers"/>

        </LinearLayout>



        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_marginTop="40dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cpb_background_progressbar_width="20dp"
            app:cpb_progressbar_color="@color/colorPrimary"
            app:cpb_progressbar_width="20dp"
            android:layout_gravity="center"
            android:id="@+id/progressBar"/>

    </LinearLayout>

</LinearLayout>